fixed profile cutoff, added title animation, and fixed tourney auto-deletion

--- a/styles/index.css
+++ b/styles/index.css
@@ -80,7 +80,7 @@ svg line{
 /*header*/
 
 .header{
-    height:500px;
+    height:490px;
 
     background-image: url("../public/rep-dot.png"), linear-gradient(335deg, rgba(234,94,61,1) 40%, rgb(255, 126, 94) 100%);;
     background-size:90px, cover;
@@ -161,7 +161,31 @@ a:hover #arrowLine{
     stroke-dashoffset: 0;
 }
 
+.header-svg{
+    display:block;
+    margin:auto;
+    filter: drop-shadow(2px 2px 2px rgba(0,0,0,.3));
+    padding:40px;
+}
+
+#svgTitle{
+    transform: translateY(43px) scale(1,.01);
+    transition:.65s;
+}
+
+#svgSubtitle{
+    opacity:0;
+    transition: 2s;
+}
+
+.title-animate-in{
+    transform:scale(1,1) !important;
+}
+
+
+
 .title{
+    display:none;
     text-align:center;
     color:#fff;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -196,6 +220,7 @@ a:hover #arrowLine{
 }
 
 .subtitle{
+    display:none;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:20px;
     color:white;
@@ -1422,5 +1447,5 @@ label{
 }
 
 .full-opacity{
-    opacity:1;
+    opacity:1 !important
 }
